--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@solana/kit": "^2.1.1",
+		"@solana/web3.js": "^1.98.2",
+		"@tailwindcss/vite": "^4.1.10",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"react-router-dom": "^7.6.2",
+		"tailwindcss": "^4.1.10"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.6.0",
